change name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nightwatch_blogpost",
+  "name": "syncano-testing-examples",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
