--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^5.0.0",
-    "babel-loader": "5.3.3",
-    "nightwatch": "^0.8.15",
-    "selenium-download": "^2.0.0"
+    "babel-core": "^6.11.4",
+    "babel-loader": "6.2.4",
+    "nightwatch": "^0.9.5",
+    "selenium-download": "2.0.0"
   }
 }
