--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "e2e-setup": "node selenium-download.js"
+    "e2e-setup": "node_modules/selenium-standalone/bin/selenium-standalone install"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^5.0.0",
-    "babel-loader": "5.3.3",
-    "nightwatch": "^0.8.15",
-    "selenium-download": "^2.0.0"
+    "babel-cli": "^6.11.4",
+    "babel-core": "^6.11.4",
+    "babel-loader": "6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-preset-es2015": "^6.9.0",
+    "nightwatch": "^0.9.5",
+    "selenium-standalone": "5.1.1"
   }
 }
