--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "e2e-setup": "node_modules/selenium-standalone/bin/selenium-standalone install"
+    "e2e-setup": "node_modules/selenium-standalone/bin/selenium-standalone install",
+    "test": "nightwatch -t"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,7 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
     "nightwatch": "^0.9.5",
-    "selenium-standalone": "5.1.1"
+    "selenium-standalone": "5.1.1",
+    "syncano": "1.0.23"
   }
 }
