--- a/part-3/package.json
+++ b/part-3/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "e2e-setup": "node_modules/selenium-standalone/bin/selenium-standalone install",
-    "test": "nightwatch -t"
+    "test": "nightwatch"
   },
   "author": "",
   "license": "ISC",
@@ -15,8 +15,8 @@
     "babel-loader": "6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.9.0",
-    "nightwatch": "^0.9.5",
-    "selenium-standalone": "5.1.1",
+    "nightwatch": "0.9.8",
+    "selenium-standalone": "5.6.2",
     "syncano": "1.0.23"
   }
 }
