--- a/part-2/package.json
+++ b/part-2/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "e2e-setup": "node_modules/selenium-standalone/bin/selenium-standalone install",
+    "e2e-setup": "selenium-standalone install",
     "test": "nightwatch"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.11.4",
+    "babel-cli": "6.11.4",
+    "babel-core": "6.11.4",
     "babel-loader": "6.2.4",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.9.0",
-    "nightwatch": "0.9.8",
-    "selenium-standalone": "5.6.2"
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-preset-es2015": "6.9.0",
+    "nightwatch": "0.9.9",
+    "selenium-standalone": "5.9.0"
   }
 }
